// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input component should be rendered correctly > should render checkbox if no schema provided and type is checkbox 1`] = `
<DocumentFragment>
  <div
    class="_fieldSetItem_7bdd01"
  >
    <input
      checked=""
      class="_input_7bdd01"
      name="Name"
      type="checkbox"
    />
    <span
      class="_checkbox_7bdd01"
    />
  </div>
</DocumentFragment>
`;

exports[`Input component should be rendered correctly > should render slider according to props 1`] = `
<DocumentFragment>
  <div
    class="_slider_7bdd01"
  >
    <input
      checked=""
      name="Name"
      schema="[object Object]"
      type="checkbox"
    />
    <span />
  </div>
</DocumentFragment>
`;

exports[`Input component should be rendered correctly > should render textarea if no schema provided and type is textarea 1`] = `
<DocumentFragment>
  <textarea
    name="Name"
    type="textarea"
  >
    value
  </textarea>
</DocumentFragment>
`;
